--- a/tddium.yml
+++ b/tddium.yml
@@ -3,6 +3,8 @@
    :bundler_version: '~> 1.3.5'
    :test_pattern:
       - features/\*.feature
+   :tests:
+      - bundle exec cucumber
    :coverage: true
    :postgresql: false
    :mysql: false
