--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ os:
 env:
    global:
     - BUNDLE_JOBS=4
+    - CODECLIMATE_REPO_TOKEN=b163215f7a0d8f226c35ed665887fce7c8b90b0bfb18576af450b4a5fba8bb71
 notifications:
   flowdock: 0a77151ce94708b17cc767c93c794a61
