--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: ruby
 rvm:
- - 1.9
+ - 1.9.3
  - 2.0
  - 2.1
  - 2.2.3
  - 2.3
  - ruby-head
+ - rbx-2
 os:
  - linux
 env:
@@ -14,5 +15,8 @@ env:
     - CODECLIMATE_REPO_TOKEN=b163215f7a0d8f226c35ed665887fce7c8b90b0bfb18576af450b4a5fba8bb71
 notifications:
   flowdock: 0a77151ce94708b17cc767c93c794a61
+matrix:
+   allow_failures:
+    - rvm: ruby-head
 before_install:
  - 'gem install bundler --version "~> 1.5"'
