--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ rvm:
  - 2.2.3
  - 2.3
  - ruby-head
- - rbx-2
+ - rbx-2.1.1
 os:
  - linux
+ - osx
 env:
    global:
     - BUNDLE_JOBS=4
@@ -18,5 +19,8 @@ notifications:
 matrix:
    allow_failures:
     - rvm: ruby-head
+    - rvm: ruby-2.3
+    - rvm: rbx-2.1.1
+    - os: osx
 before_install:
  - 'gem install bundler --version "~> 1.5"'
