--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ rvm:
  - 2.3
  - ruby-head
  - rbx-2.1.1
+ - jruby-19mode
 os:
  - linux
  - osx
@@ -21,6 +22,7 @@ matrix:
     - rvm: ruby-head
     - rvm: ruby-2.3
     - rvm: rbx-2.1.1
+    - rvm: jruby-19mode
     - os: osx
 before_install:
  - 'gem install bundler --version "~> 1.5"'
